jsTree icons alignment fixed

--- a/OpenBioC/app/static/app/konstantina/css/style.css
+++ b/OpenBioC/app/static/app/konstantina/css/style.css
@@ -197,6 +197,11 @@ nav {
     vertical-align: middle;
 }
 
+.jsTreeMaterialIcons {
+    margin-right: 2px !important;
+    padding-top: 4px;
+}
+
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
 
 /* ------------------------------------------------------------------------------- D3 example ----------------------------------------------------------------------------------- */
